GUI displays the matrix now

--- a/src/matrixsolver/MatrixGUI.form
+++ b/src/matrixsolver/MatrixGUI.form
@@ -104,6 +104,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Solve Matrix"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="solveButtonActionPerformed"/>
+              </Events>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane2">
               <AuxValues>
